支持引擎4.0，函数入参

--- a/EUExQcloudAV/uexQcloudAV/plugin.xml
+++ b/EUExQcloudAV/uexQcloudAV/plugin.xml
@@ -8,7 +8,7 @@
         <method name="close"></method>
         <method name="clear"></method>
         <method name="seekTo"></method>
-        <method name="getCurrentTime"></method>
+        <method name="getCurrentTime" sync = "true"></method>
     </plugin>
     
 </uexplugins>
